# TextEncrypter

./: .gitignore  .gitmodules
TextDecrypterAS/: settings.gradle
TextDecrypterAS/app/: build.gradle
TextDecrypterAS/app/release/: app-release.apk  output-metadata.json
TextDecrypterAS/app/src/main/: AndroidManifest.xml
TextDecrypterAS/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
TextDecrypterAS/app/src/main/res/drawable/: image_frame.xml
TextDecrypterAS/app/src/main/res/layout/: activity_main.xml
TextDecrypterAS/app/src/main/res/values-night/: themes.xml
TextDecrypterAS/gradle/wrapper/: gradle-wrapper.properties
TextDecrypterAS/keystore/: imageviewer-key.jks
TextEncrypterCPP/: TextEncrypter.cpp  TextEncrypter.h  TextEncrypterWrapper.cpp
TextEncrypterCPP/WASM/: build.sh
TextEncrypterVS/TextEncrypterCLR/: AssemblyInfo.cpp  TextEncrypterCLR.cpp  TextEncrypterCLR.h  TextEncrypterCLR.sln  TextEncrypterCLR.vcxproj  TextEncrypterCLR.vcxproj.filters
TextEncrypterVS/TextEncrypterWinApp/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  TextEncrypterWinApp.csproj  TextEncrypterWinApp.sln
TextEncrypterVS/TextEncrypterWinApp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
TextEncrypterWindows/: TextEncrypterWindows.sln
TextEncrypterWindows/TextEncrypterWindows/: Resource.h  TextEncrypterWindows.aps  TextEncrypterWindows.cpp  TextEncrypterWindows.rc  TextEncrypterWindows.vcxproj  TextEncrypterWindows.vcxproj.filters
src/cpp/: TextEncrypter.cpp
src/cpp/headers/: TextEncrypter.h
(+5 files in other folders)
